# Board-games-SDL-2.0-Cpp

./: Application.cpp  Application.h  Board.cpp  Board.h  CMakeLists.txt  Helper.h  LanguageResourceManager.cpp  LanguageResourceManager.h  NineMensMorrisBoard.cpp  Piece.cpp  Piece.h  Player.cpp  Player.h  Point.cpp  Point.h  README.md  SnakesAndLaddersBoard.cpp  Thumbs.db  english.txt  magyar.txt  main.cpp  ninemensmorrisboard.h  snakesandladdersboard.h
resources/animation/: 16-6.pdn  17-5.pdn  Thumbs.db
resources/images/: Thumbs.db
resources/texts/: english.txt  magyar.txt
